// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bidirectional Both empty 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Bidirectional Both match 1`] = `
[
  "Hc2DO@D00008DKS9",
  [
    [
      "Hc2DO@D00008DKS9",
      {
        "t1": [
          "Hc2DO@D00008DKS9",
          {
            "r1": [
              "Hc2DO@D00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              1895817569,
            ],
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3122361667,
        ],
        "t2": [
          "Hc2DO@D00008DKS9",
          {
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3344600388,
        ],
      },
      2910562851,
    ],
    [
      "Hc2DO@D00008DKS9",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          1,
          141369203,
        ],
        "v2": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      677216639,
    ],
  ],
  2233871196,
]
`;

exports[`Bidirectional different cell 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@E00005DK@@",
          {
            "r1": [
              "Hc2DO@E00005DK@@",
              {
                "c1": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              2278981137,
            ],
          },
          1217251102,
        ],
      },
      4061690484,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4061690484,
]
`;

exports[`Bidirectional different row 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@E00005DK@@",
          {
            "r1": [
              "Hc2DO@E00005DK@@",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              344610352,
            ],
          },
          2802448026,
        ],
      },
      3786004654,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3786004654,
]
`;

exports[`Bidirectional different table 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@E00005DK@@",
          {
            "r1": [
              "Hc2DO@D00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              1895817569,
            ],
            "r2": [
              "Hc2DO@E00005DK@@",
              {
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              1222617287,
            ],
          },
          3060697314,
        ],
      },
      3334131629,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3334131629,
]
`;

exports[`Bidirectional different tables 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@D00008DKS9",
          {
            "r1": [
              "Hc2DO@D00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              1895817569,
            ],
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3122361667,
        ],
        "t2": [
          "Hc2DO@E00005DK@@",
          {
            "r2": [
              "Hc2DO@E00005DK@@",
              {
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              1222617287,
            ],
          },
          3408883941,
        ],
      },
      3921477280,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3921477280,
]
`;

exports[`Bidirectional different value 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@E00005DK@@",
      {
        "v1": [
          "Hc2DO@E00005DK@@",
          2,
          3417621470,
        ],
      },
      3344195223,
    ],
  ],
  3344195223,
]
`;

exports[`Bidirectional different values 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@E00005DK@@",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          1,
          141369203,
        ],
        "v2": [
          "Hc2DO@E00005DK@@",
          2,
          3417621470,
        ],
      },
      926960662,
    ],
  ],
  926960662,
]
`;

exports[`Bidirectional store1 empty 1`] = `
[
  "Hc2DO@D00005DK@@",
  [
    [
      "Hc2DO@D00005DK@@",
      {
        "t1": [
          "Hc2DO@D00005DK@@",
          {
            "r1": [
              "Hc2DO@D00005DK@@",
              {
                "c1": [
                  "Hc2DO@D00005DK@@",
                  1,
                  2259127772,
                ],
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              928719679,
            ],
            "r2": [
              "Hc2DO@D00005DK@@",
              {
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              699425543,
            ],
          },
          2423176365,
        ],
        "t2": [
          "Hc2DO@D00005DK@@",
          {
            "r2": [
              "Hc2DO@D00005DK@@",
              {
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              699425543,
            ],
          },
          2066870701,
        ],
      },
      1390965018,
    ],
    [
      "Hc2DO@D00005DK@@",
      {
        "v1": [
          "Hc2DO@D00005DK@@",
          1,
          2259127772,
        ],
        "v2": [
          "Hc2DO@D00005DK@@",
          2,
          1545323603,
        ],
      },
      4235794163,
    ],
  ],
  2928764905,
]
`;

exports[`Bidirectional store1 missing cell 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@E00005DK@@",
          {
            "r1": [
              "Hc2DO@E00005DK@@",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              344610352,
            ],
          },
          2802448026,
        ],
      },
      3786004654,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3786004654,
]
`;

exports[`Bidirectional store1 missing row 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@E00005DK@@",
          {
            "r1": [
              "Hc2DO@D00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              1895817569,
            ],
            "r2": [
              "Hc2DO@E00005DK@@",
              {
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              1222617287,
            ],
          },
          3060697314,
        ],
      },
      3334131629,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3334131629,
]
`;

exports[`Bidirectional store1 missing table 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@D00008DKS9",
          {
            "r1": [
              "Hc2DO@D00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              1895817569,
            ],
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3122361667,
        ],
        "t2": [
          "Hc2DO@E00005DK@@",
          {
            "r2": [
              "Hc2DO@E00005DK@@",
              {
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              1222617287,
            ],
          },
          3408883941,
        ],
      },
      3921477280,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3921477280,
]
`;

exports[`Bidirectional store1 missing tables 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@E00005DK@@",
      {
        "t1": [
          "Hc2DO@E00005DK@@",
          {
            "r1": [
              "Hc2DO@E00005DK@@",
              {
                "c1": [
                  "Hc2DO@E00005DK@@",
                  1,
                  950589617,
                ],
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              1685654563,
            ],
            "r2": [
              "Hc2DO@E00005DK@@",
              {
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              1222617287,
            ],
          },
          815614250,
        ],
        "t2": [
          "Hc2DO@E00005DK@@",
          {
            "r2": [
              "Hc2DO@E00005DK@@",
              {
                "c2": [
                  "Hc2DO@E00005DK@@",
                  2,
                  3417621470,
                ],
              },
              1222617287,
            ],
          },
          3408883941,
        ],
      },
      1585750997,
    ],
    [
      "Hc2DO@D00008DKS9",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          1,
          141369203,
        ],
        "v2": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      677216639,
    ],
  ],
  1993941674,
]
`;

exports[`Bidirectional store1 missing value 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@E00005DK@@",
      {
        "v1": [
          "Hc2DO@E00005DK@@",
          1,
          950589617,
        ],
        "v2": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      2494897574,
    ],
  ],
  2494897574,
]
`;

exports[`Bidirectional store1 missing values 1`] = `
[
  "Hc2DO@E00005DK@@",
  [
    [
      "Hc2DO@D00008DKS9",
      {
        "t1": [
          "Hc2DO@D00008DKS9",
          {
            "r1": [
              "Hc2DO@D00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              1895817569,
            ],
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3122361667,
        ],
        "t2": [
          "Hc2DO@D00008DKS9",
          {
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3344600388,
        ],
      },
      2910562851,
    ],
    [
      "Hc2DO@E00005DK@@",
      {
        "v1": [
          "Hc2DO@E00005DK@@",
          1,
          950589617,
        ],
        "v2": [
          "Hc2DO@E00005DK@@",
          2,
          3417621470,
        ],
      },
      2511802205,
    ],
  ],
  952935806,
]
`;

exports[`Bidirectional store2 empty 1`] = `
[
  "Hc2DO@D00008DKS9",
  [
    [
      "Hc2DO@D00008DKS9",
      {
        "t1": [
          "Hc2DO@D00008DKS9",
          {
            "r1": [
              "Hc2DO@D00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00008DKS9",
                  1,
                  141369203,
                ],
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              1895817569,
            ],
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3122361667,
        ],
        "t2": [
          "Hc2DO@D00008DKS9",
          {
            "r2": [
              "Hc2DO@D00008DKS9",
              {
                "c2": [
                  "Hc2DO@D00008DKS9",
                  2,
                  3926301196,
                ],
              },
              749346710,
            ],
          },
          3344600388,
        ],
      },
      2910562851,
    ],
    [
      "Hc2DO@D00008DKS9",
      {
        "v1": [
          "Hc2DO@D00008DKS9",
          1,
          141369203,
        ],
        "v2": [
          "Hc2DO@D00008DKS9",
          2,
          3926301196,
        ],
      },
      677216639,
    ],
  ],
  2233871196,
]
`;

exports[`Bidirectional store2 missing cell 1`] = `
[
  "Hc2DO@E00008DKS9",
  [
    [
      "Hc2DO@E00008DKS9",
      {
        "t1": [
          "Hc2DO@E00008DKS9",
          {
            "r1": [
              "Hc2DO@E00008DKS9",
              {
                "c1": [
                  "Hc2DO@D00005DK@@",
                  1,
                  2259127772,
                ],
                "c2": [
                  "Hc2DO@E00008DKS9",
                  2,
                  2197676713,
                ],
              },
              4078575420,
            ],
          },
          2761311915,
        ],
      },
      1780969315,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1780969315,
]
`;

exports[`Bidirectional store2 missing row 1`] = `
[
  "Hc2DO@E00008DKS9",
  [
    [
      "Hc2DO@E00008DKS9",
      {
        "t1": [
          "Hc2DO@E00008DKS9",
          {
            "r1": [
              "Hc2DO@D00005DK@@",
              {
                "c1": [
                  "Hc2DO@D00005DK@@",
                  1,
                  2259127772,
                ],
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              928719679,
            ],
            "r2": [
              "Hc2DO@E00008DKS9",
              {
                "c2": [
                  "Hc2DO@E00008DKS9",
                  2,
                  2197676713,
                ],
              },
              3992018692,
            ],
          },
          1681738881,
        ],
      },
      3732892996,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3732892996,
]
`;

exports[`Bidirectional store2 missing table 1`] = `
[
  "Hc2DO@E00008DKS9",
  [
    [
      "Hc2DO@E00008DKS9",
      {
        "t1": [
          "Hc2DO@D00005DK@@",
          {
            "r1": [
              "Hc2DO@D00005DK@@",
              {
                "c1": [
                  "Hc2DO@D00005DK@@",
                  1,
                  2259127772,
                ],
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              928719679,
            ],
            "r2": [
              "Hc2DO@D00005DK@@",
              {
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              699425543,
            ],
          },
          2423176365,
        ],
        "t2": [
          "Hc2DO@E00008DKS9",
          {
            "r2": [
              "Hc2DO@E00008DKS9",
              {
                "c2": [
                  "Hc2DO@E00008DKS9",
                  2,
                  2197676713,
                ],
              },
              3992018692,
            ],
          },
          2405564801,
        ],
      },
      3369563904,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3369563904,
]
`;

exports[`Bidirectional store2 missing tables 1`] = `
[
  "Hc2DO@E00008DKS9",
  [
    [
      "Hc2DO@E00008DKS9",
      {
        "t1": [
          "Hc2DO@E00008DKS9",
          {
            "r1": [
              "Hc2DO@E00008DKS9",
              {
                "c1": [
                  "Hc2DO@E00008DKS9",
                  1,
                  2605559470,
                ],
                "c2": [
                  "Hc2DO@E00008DKS9",
                  2,
                  2197676713,
                ],
              },
              1758872521,
            ],
            "r2": [
              "Hc2DO@E00008DKS9",
              {
                "c2": [
                  "Hc2DO@E00008DKS9",
                  2,
                  2197676713,
                ],
              },
              3992018692,
            ],
          },
          1347723759,
        ],
        "t2": [
          "Hc2DO@E00008DKS9",
          {
            "r2": [
              "Hc2DO@E00008DKS9",
              {
                "c2": [
                  "Hc2DO@E00008DKS9",
                  2,
                  2197676713,
                ],
              },
              3992018692,
            ],
          },
          2405564801,
        ],
      },
      3657279431,
    ],
    [
      "Hc2DO@D00005DK@@",
      {
        "v1": [
          "Hc2DO@D00005DK@@",
          1,
          2259127772,
        ],
        "v2": [
          "Hc2DO@D00005DK@@",
          2,
          1545323603,
        ],
      },
      4235794163,
    ],
  ],
  629453108,
]
`;

exports[`Bidirectional store2 missing value 1`] = `
[
  "Hc2DO@E00008DKS9",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@E00008DKS9",
      {
        "v1": [
          "Hc2DO@E00008DKS9",
          1,
          2605559470,
        ],
        "v2": [
          "Hc2DO@D00005DK@@",
          2,
          1545323603,
        ],
      },
      4260941800,
    ],
  ],
  4260941800,
]
`;

exports[`Bidirectional store2 missing values 1`] = `
[
  "Hc2DO@E00008DKS9",
  [
    [
      "Hc2DO@D00005DK@@",
      {
        "t1": [
          "Hc2DO@D00005DK@@",
          {
            "r1": [
              "Hc2DO@D00005DK@@",
              {
                "c1": [
                  "Hc2DO@D00005DK@@",
                  1,
                  2259127772,
                ],
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              928719679,
            ],
            "r2": [
              "Hc2DO@D00005DK@@",
              {
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              699425543,
            ],
          },
          2423176365,
        ],
        "t2": [
          "Hc2DO@D00005DK@@",
          {
            "r2": [
              "Hc2DO@D00005DK@@",
              {
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              699425543,
            ],
          },
          2066870701,
        ],
      },
      1390965018,
    ],
    [
      "Hc2DO@E00008DKS9",
      {
        "v1": [
          "Hc2DO@E00008DKS9",
          1,
          2605559470,
        ],
        "v2": [
          "Hc2DO@E00008DKS9",
          2,
          2197676713,
        ],
      },
      192394997,
    ],
  ],
  1503643631,
]
`;

exports[`Unidirectional autoLoad1 but not autoSave2, defaults 1`] = `
[
  "Hc2DO@D00008DKS9",
  [
    [
      "Hc2DO@D00008DKS9",
      {
        "t0": [
          "Hc2DO@D00008DKS9",
          {
            "r0": [
              "Hc2DO@D00008DKS9",
              {
                "c0": [
                  "Hc2DO@D00008DKS9",
                  0,
                  4108551114,
                ],
              },
              400667466,
            ],
          },
          3149380490,
        ],
      },
      3285969980,
    ],
    [
      "Hc2DO@D00008DKS9",
      {
        "v0": [
          "Hc2DO@D00008DKS9",
          0,
          4108551114,
        ],
      },
      3908332752,
    ],
  ],
  724533484,
]
`;

exports[`Unidirectional autoLoad1 but not autoSave2, defaults 2`] = `
[
  "Hc2DO@D00005DK@@",
  [
    [
      "Hc2DO@D00005DK@@",
      {
        "t1": [
          "Hc2DO@D00005DK@@",
          {
            "r1": [
              "Hc2DO@D00005DK@@",
              {
                "c1": [
                  "Hc2DO@D00005DK@@",
                  1,
                  2259127772,
                ],
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              928719679,
            ],
            "r2": [
              "Hc2DO@D00005DK@@",
              {
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              699425543,
            ],
          },
          2423176365,
        ],
        "t2": [
          "Hc2DO@D00005DK@@",
          {
            "r2": [
              "Hc2DO@D00005DK@@",
              {
                "c2": [
                  "Hc2DO@D00005DK@@",
                  2,
                  1545323603,
                ],
              },
              699425543,
            ],
          },
          2066870701,
        ],
      },
      1390965018,
    ],
    [
      "Hc2DO@D00005DK@@",
      {
        "v1": [
          "Hc2DO@D00005DK@@",
          1,
          2259127772,
        ],
        "v2": [
          "Hc2DO@D00005DK@@",
          2,
          1545323603,
        ],
      },
      4235794163,
    ],
  ],
  2928764905,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Unidirectional load1 but not autoSave2, defaults 1`] = `
[
  "Hc2DO@D00008DKS9",
  [
    [
      "Hc2DO@D00008DKS9",
      {
        "t0": [
          "Hc2DO@D00008DKS9",
          {
            "r0": [
              "Hc2DO@D00008DKS9",
              {
                "c0": [
                  "Hc2DO@D00008DKS9",
                  0,
                  4108551114,
                ],
              },
              400667466,
            ],
          },
          3149380490,
        ],
      },
      3285969980,
    ],
    [
      "Hc2DO@D00008DKS9",
      {
        "v0": [
          "Hc2DO@D00008DKS9",
          0,
          4108551114,
        ],
      },
      3908332752,
    ],
  ],
  724533484,
]
`;

exports[`Unidirectional load1 but not autoSave2, defaults 2`] = `
[
  "Hc2DO@000005DK@@",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  2424293582,
]
`;

exports[`Unidirectional save1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional save1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;
